clean up ResearchManager (most of the methods were useless)